spec/mermaid/flowchart/103_parser_should_be_possible_to_link_to_a_node_with_more_data_98.error

Error: Parse error on line 5:
...cle        other: 
---------------------^
Expecting 'SEMI', 'NEWLINE', 'SPACE', 'EOF', 'SHAPE_DATA', 'START_LINK', 'LINK', 'LINK_ID', got '1'
Parser3.parseError (/Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/mermaid/dist/mermaid.js:91236:28)
    at #evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/ExecutionContext.js:388:19)
    at async ExecutionContext.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/ExecutionContext.js:275:16)
    at async IsolatedWorld.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/IsolatedWorld.js:97:16)
    at async CdpJSHandle.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/JSHandle.js:146:20)
    at async CdpElementHandle.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/ElementHandle.js:340:20)
    at async CdpElementHandle.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/ElementHandle.js:494:24)
    at async CdpFrame.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/Frame.js:450:20)
    at async CdpPage.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/Page.js:450:20)
    at async renderMermaid (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/src/index.js:266:22)
    at fromText (/Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/mermaid/dist/mermaid.js:153955:21)

